<resources>
    <string name="app_name">HealthMonitoring</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="feature">Отчество</string>
    <string name="age">Возраст</string>
    <string name="button_main_save">Сохранить</string>
    <string name="text_title_main">Комплексная система мониторинга здоровья. Туманов В.Н.</string>
    <string name="text_title_menu">Выберите действие.</string>
    <string name="buttonPressure">Запись давления</string>
    <string name="buttonHeftSteps">Вес и шаги</string>
    <string name="text_title_heftSteps">Запись жизненных показателей</string>
    <string name="weight">Вес</string>
    <string name="steps">Количество шагов</string>
    <string name="patientInfo">Пациент: %s %s %s, Возраст: %d лет</string>
    <string name="patientInfoNodName">Пациент: %s, Возраст: %d лет</string>
    <string name="viewHeft">%s: Вес: %d кг, Кол-во шагов: %d</string>
    <string name="empty">Запись отсутствует</string>
    <string name="text_title_pressure">Запись артериального давления</string>
    <string name="edit_up_pressure">Верхнее давление</string>
    <string name="edit_low_pressure">Нижнее давление</string>
    <string name="edit_pulse">Пульс</string>
    <string name="switch_tachycardia">Тахикардия</string>
    <string name="viewPressure">%s: Давление: %d на %d, Пульс: %d уд/мин, Тахикардия: %s</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="exception">Получено исключение</string>
    <string name="error_form">Не корректно заполнена форма</string>
    <string name="new_obj">Создан объект класса Patient</string>
    <string name="move_save_pressure">Переход на запись давления</string>
    <string name="move_save_heft">Переход на запись веса и шагов</string>
    <string name="unknown">ФИО отсутствует</string>
</resources>
