<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressureActivity">

    <Button
        android:id="@+id/button_pressure_save"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:text="@string/button_main_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_tachycardia" />

    <EditText
        android:id="@+id/editUpPressure"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_up_pressure"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPressure" />

    <EditText
        android:id="@+id/editLowPressure"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_low_pressure"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUpPressure" />

    <EditText
        android:id="@+id/editPulse"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/edit_pulse"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLowPressure" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/SmallSp"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:background="@color/colorLine"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title_heftSteps"
        android:layout_width="249dp"
        android:layout_height="95dp"
        android:gravity="center_vertical"
        android:text="@string/text_title_pressure"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_tachycardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:freezesText="false"
        android:scrollbarSize="4dp"
        android:text="@string/switch_tachycardia"
        android:textOff="@string/no"
        android:textOn="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPulse" />

    <TextView
        android:id="@+id/viewPressure"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="116dp"
        android:text="@string/empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>