<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/SmallSp"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:background="@color/colorLine"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editSurname"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurname" />

    <EditText
        android:id="@+id/editFeature"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/feature"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFeature" />

    <Button
        android:id="@+id/button_main_save"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/button_main_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAge" />

    <TextView
        android:id="@+id/text_title_heftSteps"
        android:layout_width="249dp"
        android:layout_height="95dp"
        android:gravity="center_vertical"
        android:text="@string/text_title_main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>