<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HeftStepsActivity">

    <Button
        android:id="@+id/button_save_heft"
        android:layout_width="247dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/button_main_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSteps" />

    <EditText
        android:id="@+id/editSteps"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/steps"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeight" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/weight"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeft" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/SmallSp"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:background="@color/colorLine"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title_heftSteps"
        android:layout_width="249dp"
        android:layout_height="95dp"
        android:gravity="center_vertical"
        android:text="@string/text_title_heftSteps"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/viewHeft"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/empty"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>