<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/buttonHeftSteps"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginEnd="35dp"
        android:background="#f44336"
        android:text="@string/buttonHeftSteps"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientInfo"
        app:layout_constraintVertical_bias="0.645" />

    <Button
        android:id="@+id/buttonPressure"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="35dp"
        android:background="#757575"
        android:text="@string/buttonPressure"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientInfo"
        app:layout_constraintVertical_bias="0.645" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="97dp"
        android:layout_height="97dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/SmallSp"
        android:layout_width="0dp"
        android:layout_height="1sp"
        android:background="@color/colorLine"
        app:layout_constraintBottom_toBottomOf="@+id/imageLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title_heftSteps"
        android:layout_width="249dp"
        android:layout_height="95dp"
        android:gravity="center_vertical"
        android:text="@string/text_title_menu"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.837"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patientInfo"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>